<resources>
    <string name="app_name">Aegis Application</string>
    <string name="options_english">English</string>
    <string name="options_spanish">Spanish</string>
    <string name="enter_name">Enter Name</string>
    <string name="button_submit">Submit Button</string>
    <string name="web_button1">Website_1</string>
    <string name="web_address1">http:www.instagram.com</string>
    <string name="incognito_web_address">https://www.instagram.com/pickersstickers/</string>
    <string name="youtube_app">com.google.android.youtube</string>
    <string name="pinterest_app">com.pinterest</string>
    <string name="facebook_app">com.facebook.katana</string>
    <string name="twitter_app">com.twitter.android</string>
    <string name="instagram_app">com.instagram.android</string>
    <string name="spotify_app">com.spotify.music</string>
    <string name="hotline_call">1-800-799-7233</string>
    <string name="hotline_TTY_call">1-800-787-3224</string>
    <string name="chat_url">https://ndvh.secure.force.com/resources/apex/LiveAgentPreChat?endpoint=https%3A%2F%2Fbmw1.la4-c3-ph2.salesforceliveagent.com%2Fcontent%2Fs%2Fchat%3Flanguage%3Den_US%23deployment_id%3D5722A000000PBnZ%26org_id%3D00DF00000006ovk%26button_id%3D5732A000000PC5N%26session_id%3D4a67f7e2-a0ca-4af2-939e-aa3c3dce08de</string>
    <string-array name="abuse_types">
        <item>@string/physical</item>
        <item>@string/sexual</item>
        <item>@string/verbal</item>
        <item>@string/mental</item>
    </string-array>
    <string-array name="verbal_forMe">
        <item>@string/verbal_self_1</item>
        <item>@string/verbal_self_2</item>
    </string-array>
    <string-array name="verbal_forSomeoneElse">
        <item>@string/verbal_other_1</item>
        <item>@string/verbal_other_2</item>
    </string-array>
    <string-array name="verbal_forMe_names">
        <item>@string/verbal_self_1_name</item>
        <item>@string/verbal_self_2_name</item>
    </string-array>
    <string-array name="verbal_forSomeoneElse_names">
        <item>@string/verbal_other_1_name</item>
        <item>@string/verbal_other_2_name</item>
    </string-array>
    <string name="verbal_definition">The repeated improper and excessive use of language to
        humiliate someone, or to undermine someone’s dignity.</string>
    <string name="verbal_other_1">https://dayoneservices.org/verbal-abuse/</string>
    <string name="verbal_other_1_name">Dayone Services: Verbal Abuse</string>
    <string name="verbal_other_2">https://www.psychologytoday.com/us/blog/the-mysteries-love/201612/the-most-effective-way-put-end-verbal-abuse</string>
    <string name="verbal_other_2_name">Psychology Today: Ending Verbal Abuse</string>
    <string name="verbal_self_1">https://www.seleni.org/advice-support/2018/3/20/are-you-being-verbally-abused</string>
    <string name="verbal_self_1_name">Are You Being Verbally Abused?</string>
    <string name="verbal_self_2">https://esme.com/resources/domestic-violence/what-should-i-do-if-i-am-a-victim-of-verbal-abuse</string>
    <string name="verbal_self_2_name">Verbal Abuse: What To Do</string>
    <string-array name="mental_forMe">
        <item>@string/mental_self_1</item>
        <item>@string/mental_self_2</item>
    </string-array>
    <string-array name="mental_forSomeoneElse">
        <item>@string/mental_other_1</item>
        <item>@string/mental_other_2</item>
        <item>@string/mental_other_3</item>
    </string-array>
    <string-array name="mental_forMe_names">
        <item>@string/mental_self_1_name</item>
        <item>@string/mental_self_2_name</item>
    </string-array>
    <string-array name="mental_forSomeoneElse_names">
        <item>@string/mental_other_1_name</item>
        <item>@string/mental_other_2_name</item>
        <item>@string/mental_other_3_name</item>
    </string-array>
    <string name="mental_definition">Involves a person’s attempts to frighten, control,
        or isolate you. It’s in the abuser’s words and actions, as well as their persistence in
        these behaviors to twist and contort the reality of a victim in order to obtain control
        of them. Abuser uses fear, humiliation, or verbal assault to undermine the self-esteem of
        the victim.</string>
    <string name="mental_other_1">https://www.healthline.com/health/child-neglect-and-psychological-abuse</string>
    <string name="mental_other_1_name">Psychological Abuse</string>
    <string name="mental_other_2">https://bandbacktogether.com/master-resource-links-2/abuse-resources/emotional-abuse-resources/</string>
    <string name="mental_other_2_name">Emotional Abuse Resources</string>
    <string name="mental_other_3">https://www.healthline.com/health/signs-of-mental-abuse</string>
    <string name="mental_other_3_name">Signs of Mental Abuse</string>
    <string name="mental_self_1">https://www.thehotline.org/is-this-abuse/​</string>
    <string name="mental_self_1_name">Is This Abuse?</string>
    <string name="mental_self_2">https://www.thehotline.org/</string>
    <string name="mental_self_2_name">The Hotline Website</string>
    <string-array name="physical_forMe">
        <item>@string/physical_self_1</item>
        <item>@string/physical_self_2</item>
        <item>@string/physical_self_3</item>
    </string-array>
    <string-array name="physical_forSomeoneElse">
        <item>@string/physical_other_1</item>
        <item>@string/physical_other_2</item>
    </string-array>
    <string-array name="physical_forMe_names">
        <item>@string/physical_self_1_name</item>
        <item>@string/physical_self_2_name</item>
        <item>@string/physical_self_3_name</item>
    </string-array>
    <string-array name="physical_forSomeoneElse_names">
        <item>@string/physical_other_1_name</item>
        <item>@string/physical_other_2_name</item>
    </string-array>
    <string name="physical_definition">Domestic violence includes behaviors that physically harm,
        arouse fear, prevent a partner from doing what they wish or force them to behave in ways
        they do not want. It includes the use of physical and sexual violence, threats and
        intimidation, emotional abuse and economic deprivation. Many of these different forms of
        domestic violence/abuse can be occurring at any one time within the same intimate
        relationship.</string>
    <string name="physical_other_1">https://www.thehotline.org/help/help-for-friends-and-family/</string>
    <string name="physical_other_1_name">Help for Friends and Family</string>
    <string name="physical_other_2">https://www.verywellmind.com/how-to-help-a-victim-of-domestic-violence-66533</string>
    <string name="physical_other_2_name">How To Help Victims of Domestic Violence</string>
    <string name="physical_self_1">https://www.thehotline.org/help/path-to-safety/</string>
    <string name="physical_self_1_name">The Path to Safety</string>
    <string name="physical_self_2">https://www.helpguide.org/articles/abuse/getting-out-of-an-abusive-relationship.html</string>
    <string name="physical_self_2_name">Getting Out of an Abusive Relationship</string>
    <string name="physical_self_3">https://familycrisiscenter.wixsite.com/familycrisiscenter/domestic-violence</string>
    <string name="physical_self_3_name">Domestic Violence</string>
    <string-array name="sexual_forMe">
        <item>@string/sexual_self_1</item>
        <item>@string/sexual_self_2</item>
        <item>@string/sexual_self_3</item>
    </string-array>
    <string-array name="sexual_forSomeoneElse">
        <item>@string/sexual_other_1</item>
        <item>@string/sexual_other_2</item>
        <item>@string/sexual_other_3</item>
        <item>@string/sexual_other_4</item>
    </string-array>
    <string-array name="sexual_forMe_names">
        <item>@string/sexual_self_1_name</item>
        <item>@string/sexual_self_2_name</item>
        <item>@string/sexual_self_3_name</item>
    </string-array>
    <string-array name="sexual_forSomeoneElse_names">
        <item>@string/sexual_other_1_name</item>
        <item>@string/sexual_other_2_name</item>
        <item>@string/sexual_other_3_name</item>
        <item>@string/sexual_other_4_name</item>
    </string-array>
    <string name="sexual_definition">Sexual Assault: An act in which a person
        intentionally sexually touches another person without that person\'s consent, or coerces
        or physically forces a person to engage in a sexual act against their will.
        &#xD;
        Rape: A type of sexual assault initiated by one or more persons against another
        person without that person\'s consent. The act may be carried out by physical force, or
        where the person is under threat or manipulation, or with a person who is incapable of
        valid consent.</string>
    <string name="sexual_other_1">https://www.womenslaw.org/about-abuse/helping-others/family-friends-and-co-workers</string>
    <string name="sexual_other_1_name">Helping Family, Friends and Co-Workers</string>
    <string name="sexual_other_2">https://www.rainn.org/articles/tips-talking-survivors-sexual-assault</string>
    <string name="sexual_other_2_name">Tips for Talking to Survivors</string>
    <string name="sexual_other_3">https://sapac.umich.edu/article/helping-survivor-sexual-assault</string>
    <string name="sexual_other_3_name">Helping Survivors of Sexual Assault</string>
    <string name="sexual_other_4">https://www.nytimes.com/2019/02/27/smarter-living/sexual-abuse-assault-support-mental-health.html</string>
    <string name="sexual_other_4_name">Sexual Abuse</string>
    <string name="sexual_self_1">https://www.helpguide.org/articles/ptsd-trauma/recovering-from-rape-and-sexual-trauma.html</string>
    <string name="sexual_self_1_name">Recovering from Rape and Sexual Trauma</string>
    <string name="sexual_self_2">https://victimconnect.org/learn/types-of-crime/sexual-assault/</string>
    <string name="sexual_self_2_name">Sexual Assault</string>
    <string name="sexual_self_3">https://victimsofcrime.org/help-for-crime-victims/get-help-bulletins-for-crime-victims/bulletins-for-teens/sexual-assault</string>
    <string name="sexual_self_3_name">Teens and Sexual Assault</string>
    <string name="aegis_background">Background for Aegis</string>
    <string name="incognito_button">Button for Incognito</string>
    <string name="begin_button">Begin</string>
    <string name="safety_alert">Safety Alert: Mobile phone use can be monitored and is impossible to completely clear. If you are afraid your internet usage might be monitored, call the National Domestic Violence Hotline at 1−800−799−7233. You can quickly use the Incognito Button at the botton to quickly change applications or websites.</string>
    <string name="incognito_website">Incognito Website</string>
    <string name="options">Options</string>
    <string name="update">Update</string>
    <string name="incognito_function">incognito function</string>
    <string name="or_enter_your_own_website">Or enter your own website</string>
    <string name="select_an_app_for_incognito_mode">Select an app for Incognito mode</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="is_this_an_emergency">Is this an EMERGENCY?</string>
    <string name="is_this_for_you_or_someone_else">Is this for you or someone else?</string>
    <string name="for_me">For Me</string>
    <string name="for_someone_else">For Someone Else</string>
    <string name="emergency_prompt">Is this an emergency?</string>
    <string name="hotline_name">The National Domestic Violence Hotline</string>
    <string name="call_tollfree">CALL TOLL-FREE</string>
    <string name="call_tollfree_tty">TTY CALL - TOLL-FREE</string>
    <string name="chat_247">CHAT - AVAILABLE 24/7</string>
    <string name="textline">Crisis Text Line</string>
    <string name="start_text">START TEXT CONVERSATION</string>
</resources>