<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button

        android:id="@+id/beginButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"

        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/curve_thin"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/begin_button"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openingWelcomeConstraint" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="411dp"
        android:layout_height="731dp"
        android:contentDescription="@string/aegis_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/aegis_main_activity_background" />

    <ImageButton
        android:id="@+id/incognitoButton"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/incognito_wings_background"
        android:contentDescription="@string/incognito_button"
        android:onClick="startIncognito"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@mipmap/incognito_wings" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/openingWelcomeConstraint"
        android:layout_width="404dp"
        android:layout_height="376dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/openingWelcome"
            android:layout_width="0dp"
            android:layout_height="247dp"
            android:layout_marginTop="44dp"
            android:background="#E6F9FF"
            android:fontFamily="casual"
            android:text="@string/safety_alert"
            android:textAlignment="center"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/closeWelcome"
            android:layout_width="83dp"
            android:layout_height="79dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="10dp"
            android:width="200dp"
            android:height="200dp"
            android:background="@drawable/closewindow"
            android:onClick="welcomeMessageClose"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/openingWelcome" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>